mutants.out.old/log/crates__graph-viewer__src__lib.rs_line_106_col_9_001.log

*** crates/graph-viewer/src/lib.rs:106:9: replace Graph::edges -> &[Edge] with Vec::leak(vec![Default::default()])

*** mutation diff:
--- crates/graph-viewer/src/lib.rs
+++ replace Graph::edges -> &[Edge] with Vec::leak(vec![Default::default()])
@@ -98,17 +98,17 @@
         Self::new(nodes, edges)
     }
 
     pub fn nodes(&self) -> &[Node] {
         &self.nodes
     }
 
     pub fn edges(&self) -> &[Edge] {
-        &self.edges
+        Vec::leak(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 fn validate_graph(nodes: &[Node], edges: &[Edge]) -> Result<(), GraphLoadError> {
     let mut ids = BTreeSet::new();
 
     for node in nodes {
         if !ids.insert(node.id.clone()) {


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=manual-graph-viewer@0.1.0
       Fresh unicode-ident v1.0.24
       Fresh proc-macro2 v1.0.106
       Fresh quote v1.0.45
       Fresh syn v2.0.117
       Fresh bitflags v2.11.1
       Fresh libc v0.2.186
       Fresh synstructure v0.13.2
       Fresh objc2-encode v4.1.0
       Fresh cfg-if v1.0.4
       Fresh zerofrom-derive v0.1.7
       Fresh zerofrom v0.1.7
       Fresh yoke-derive v0.8.2
       Fresh stable_deref_trait v1.2.1
       Fresh yoke v0.8.2
       Fresh zerovec-derive v0.11.3
       Fresh zerovec v0.11.6
       Fresh displaydoc v0.2.5
       Fresh smallvec v1.15.1
       Fresh cfg_aliases v0.2.1
       Fresh autocfg v1.5.0
       Fresh zerocopy-derive v0.8.48
       Fresh zerocopy v0.8.48
       Fresh objc2 v0.6.4
       Fresh objc-sys v0.3.5
       Fresh tinystr v0.8.3
       Fresh bytemuck_derive v1.10.2
       Fresh core-foundation-sys v0.8.7
       Fresh litemap v0.8.2
       Fresh writeable v0.6.3
       Fresh icu_locale_core v2.2.0
       Fresh bytemuck v1.25.0
       Fresh objc2 v0.5.2
       Fresh zerotrie v0.2.4
       Fresh potential_utf v0.1.5
       Fresh utf8_iter v1.0.4
       Fresh simd-adler32 v0.3.9
       Fresh icu_collections v2.2.0
       Fresh icu_provider v2.2.0
       Fresh block2 v0.5.1
       Fresh objc2-core-foundation v0.3.2
       Fresh adler2 v2.0.1
       Fresh once_cell v1.21.4
       Fresh dispatch v0.2.0
       Fresh version_check v0.9.5
       Fresh objc2-foundation v0.2.2
       Fresh miniz_oxide v0.8.9
       Fresh crc32fast v1.5.0
       Fresh icu_properties_data v2.2.0
       Fresh icu_normalizer_data v2.2.0
       Fresh core-foundation v0.9.4
       Fresh foreign-types-macros v0.2.3
       Fresh ttf-parser v0.25.1
       Fresh bitflags v1.3.2
       Fresh log v0.4.29
       Fresh foreign-types-shared v0.3.1
       Fresh accesskit v0.21.1
       Fresh scopeguard v1.2.0
       Fresh lock_api v0.4.14
       Fresh foreign-types v0.5.0
       Fresh core-graphics-types v0.1.3
       Fresh owned_ttf_parser v0.25.1
       Fresh icu_normalizer v2.2.0
       Fresh icu_properties v2.2.0
       Fresh flate2 v1.1.9
       Fresh parking_lot_core v0.9.12
       Fresh objc2-app-kit v0.2.2
       Fresh objc2-core-graphics v0.3.2
       Fresh objc2-foundation v0.3.2
       Fresh emath v0.33.3
       Fresh ab_glyph_rasterizer v0.1.10
       Fresh tracing-core v0.1.36
       Fresh foldhash v0.1.5
       Fresh pin-project-lite v0.2.17
       Fresh raw-window-handle v0.6.2
       Fresh zune-core v0.5.1
       Fresh zune-jpeg v0.5.15
       Fresh tracing v0.1.44
       Fresh hashbrown v0.15.5
       Fresh ab_glyph v0.2.32
       Fresh ecolor v0.33.3
       Fresh objc2-app-kit v0.3.2
       Fresh ahash v0.8.12
       Fresh parking_lot v0.12.5
       Fresh idna_adapter v1.2.2
       Fresh num-traits v0.2.19
       Fresh core-graphics v0.23.2
       Fresh fdeflate v0.3.7
       Fresh half v2.7.1
       Fresh cursor-icon v1.2.0
       Fresh weezl v0.1.12
       Fresh profiling v1.0.18
       Fresh quick-error v2.0.1
       Fresh nohash-hasher v0.2.0
       Fresh epaint_default_fonts v0.33.3
       Fresh smol_str v0.2.2
       Fresh pxfm v0.1.29
       Fresh percent-encoding v2.3.2
       Fresh dpi v0.1.2
       Fresh fax v0.2.7
       Fresh tiff v0.11.3
       Fresh winit v0.30.13
       Fresh form_urlencoded v1.2.2
       Fresh moxcms v0.8.1
       Fresh epaint v0.33.3
       Fresh png v0.18.1
       Fresh idna v1.1.0
       Fresh accesskit_consumer v0.31.0
       Fresh byteorder-lite v0.1.0
       Fresh unicode-segmentation v1.13.2
       Fresh egui v0.33.3
       Fresh image v0.25.10
       Fresh accesskit_macos v0.22.2
       Fresh url v2.5.8
       Fresh core-foundation v0.10.1
       Fresh dispatch2 v0.3.1
       Fresh libloading v0.8.9
       Fresh cgl v0.3.2
       Fresh glutin v0.32.3
       Fresh webbrowser v1.2.1
       Fresh accesskit_winit v0.29.2
       Fresh memoffset v0.9.1
       Fresh arboard v3.6.1
       Fresh serde_core v1.0.228
       Fresh same-file v1.0.6
       Fresh litrs v1.0.0
       Fresh web-time v1.1.0
       Fresh glow v0.16.0
       Fresh egui_glow v0.33.3
       Fresh egui-winit v0.33.3
       Fresh document-features v0.2.12
       Fresh walkdir v2.5.0
       Fresh glutin-winit v0.5.0
       Fresh zmij v1.0.21
       Fresh fsevent-sys v4.1.0
       Fresh notify-types v2.1.0
       Fresh serde_derive v1.0.228
       Fresh itoa v1.0.18
       Fresh static_assertions v1.1.0
       Fresh memchr v2.8.0
       Fresh serde_json v1.0.149
       Fresh eframe v0.33.3
       Fresh serde v1.0.228
       Fresh notify v8.2.0
       Dirty manual-graph-viewer v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/crates/graph-viewer): the file `crates/graph-viewer/src/lib.rs` has changed (1778057037.576828424s, 8s after last build at 1778057029.301659118s)
   Compiling manual-graph-viewer v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/crates/graph-viewer)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name manual_graph_viewer --edition=2024 crates/graph-viewer/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2469bf31cc1daf3e -C extra-filename=-42955a257e995257 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps --extern eframe=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libeframe-2bd5e62752c79f8d.rmeta --extern notify=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libnotify-bf0428064339f1f2.rmeta --extern serde=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libserde-159ce5b35adc4b9b.rmeta --extern serde_json=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libserde_json-32569adafcfe3ecf.rmeta`
error[E0277]: the trait bound `Edge: std::default::Default` is not satisfied
   --> crates/graph-viewer/src/lib.rs:106:24
    |
106 |         Vec::leak(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
    |                        ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `Edge`
    |
help: consider annotating `Edge` with `#[derive(Default)]`
    |
 55 + #[derive(Default)]
 56 | pub struct Edge {
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `manual-graph-viewer` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name manual_graph_viewer --edition=2024 crates/graph-viewer/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2469bf31cc1daf3e -C extra-filename=-42955a257e995257 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps --extern eframe=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libeframe-2bd5e62752c79f8d.rmeta --extern notify=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libnotify-bf0428064339f1f2.rmeta --extern serde=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libserde-159ce5b35adc4b9b.rmeta --extern serde_json=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps/libserde_json-32569adafcfe3ecf.rmeta` (exit status: 1)

*** result: Failure(101)
